# microsoft-face-cognitive

./: Makefile  Makefile.am  Makefile.in  README.md  aclocal.m4  config.h  config.status  configure  configure.ac  face.py  test.file
autom4te.cache/: output.0  output.1  output.2  requests  traces.0  traces.1  traces.2  traces.3
include/: face.hpp
include/opencv/: cv.h,.in~
opencv/sample/: build_and_setup.sh  captureImage  captureImage.cpp  captureImage_2  captureImage_2.cpp  displayImage
src/: Makefile  Makefile.am  Makefile.in  face  face.cpp  face.py  frame.cpp  python_cpp_interface.cpp
src/.deps/: face.Po  frame.Po  python_cpp_interface.Po
src/face/: face.py
src/opencv/: face  face.cpp
src/opencv/include/opencv2/: cvconfig.h
src/opencv/sample/: build_and_setup.sh  face.py
